Bug 907793: Fix Open Sans to be able to render Romanian - The patched files are provided by Jonathan Kew, see https://bugzilla.mozilla.org/show_bug.cgi?id=907793#c19 - CSS files referencing the OpenSans font are updated with a comment to force a cache bust

--- a/media/css/foundation/annual2011print.css
+++ b/media/css/foundation/annual2011print.css
@@ -1,5 +1,7 @@
 /* Print styles for the 2011 State of Mozilla annual report */
 
+/*! updated 2015-06-17 */
+
 /* Fonts */
 @font-face {
     font-family: 'Open Sans Light';
