--- a/media/css/tabzilla/tabzilla.less
+++ b/media/css/tabzilla/tabzilla.less
@@ -1,3 +1,5 @@
+/*! updated 2015-06-17 */
+
 @import "../sandstone/lib.less";
 
 // IE does not like file-relative (e.g. '../fonts/*') URLs due to our
