--- a/media/css/firefox/os/mwc-2015-preview.less
+++ b/media/css/firefox/os/mwc-2015-preview.less
@@ -2,6 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+/*! updated 2015-06-17 */
+
 @import "../../firefox/mwc-2015-schedule.less";
 @import "../../firefox/mwc-2015-map.less";
 
