--- a/media/css/sandstone/fonts.less
+++ b/media/css/sandstone/fonts.less
@@ -2,6 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+/*! updated 2015-06-17 */
+
 @font-face {
     font-family: 'Open Sans Light';
     src: url('/media/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
