--- a/media/css/sandstone/oldIE.less
+++ b/media/css/sandstone/oldIE.less
@@ -5,6 +5,8 @@
 // This style sheet is served exclusively to Internet Explorer 7 and older.
 // Old versions get this minimal style while IE8 and up recieve more advanced styling.
 
+/*! updated 2015-06-17 */
+
 @import "lib.less";
 @import "reset.less";
 @import "buttons.less";
