Fix Bug 1172988, show loader while plugin status is determined

--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -106,6 +106,8 @@
         <li>{{_('Step 2: Complete all recommended updates before restarting your browser.')}}</li>
       </ul>
 
+      <div class="plugincheck-loader"></div>
+
       <div id="sec-plugin-vulnerable">
         <table class="table status">
           <caption>{{_('Potentially vulnerable plugins')}}</caption>
