--- a/media/css/plugincheck/plugincheck.less
+++ b/media/css/plugincheck/plugincheck.less
@@ -265,6 +265,13 @@ html[dir="rtl"] {
     text-align: center;
     .font-size(18px);
 }
+.plugincheck-loader {
+    display: none;
+    background: #fff url('/media/img/plugincheck/loader.gif') 0 0 no-repeat;
+    margin: 16px auto;
+    width: 64px;
+    height: 64px;
+}
 // assume Fx users by default and hide nonFx user info.
 // assume js is enabled
 .not-supported,
