[fix bug 1166967] Localizing Cameroon in the Map of Mozilla Communities

--- a/bedrock/mozorg/templates/mozorg/contact/contact-base.html
+++ b/bedrock/mozorg/templates/mozorg/contact/contact-base.html
@@ -377,6 +377,9 @@
             <li data-id="algeria">
               <a href="{{ url('mozorg.contact.communities.algeria') }}">{{ _('Algeria') }}</a>
             </li>
+            <li data-id="cameroon">
+              <a href="{{ url('mozorg.contact.communities.cameroon') }}">{{ _('Cameroon') }}</a>
+            </li>
             <li data-id="egypt">
               <a href="{{ url('mozorg.contact.communities.egypt') }}">{{ _('Egypt') }}</a>
             </li>
@@ -509,4 +512,3 @@
 </main>
 
 {% endblock %}
-
