--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -244,7 +244,10 @@ html.ios {
     }
 }
 
-
+// Adjust main heading style for RTL
+html[dir="rtl"] #header h1 {
+    float: left;
+}
 
 /*--------------------------------------------------------------------------*/
 // Base styles for product groups
