Bug 1179196. Fix aurora bars mixin for IE < 10.

--- a/media/css/sandstone/lib.less
+++ b/media/css/sandstone/lib.less
@@ -499,6 +499,7 @@
 // Will usually be added to #outer-wrapper
 .aurora-bars(@pageBgColor: @mozIDBlue, @auroraStartColor: #00a7e0) {
     background-color: @pageBgColor;
+    background-image: none;
     background-image: linear-gradient(to bottom, fade(@pageBgColor, 0%) 0px, fade(@pageBgColor, 0%) 100px, @pageBgColor 450px, @pageBgColor),
         repeating-linear-gradient(118deg,
             fade(@pageBgColor, 0%) 0px, @auroraStartColor 550px,
