[fix bug 1178217] Updates to Hello FTU for Firefox 40

--- a/media/css/firefox/hello/start.less
+++ b/media/css/firefox/hello/start.less
@@ -92,6 +92,16 @@ main {
     visibility: hidden;
 }
 
+#firefox-hello-start-minimal {
+    main {
+        visibility: visible;
+    }
+
+    h1 {
+        margin: (@baseLine * 10) @baseLine @baseLine;
+    }
+}
+
 .spacer {
     width: 30%;
     height: 700px;
@@ -156,6 +166,12 @@ aside {
     .spacer {
         width: 35%;
     }
+
+    #firefox-hello-start-minimal {
+        h1 {
+            margin: (@baseLine * 14) @baseLine @baseLine;
+        }
+    }
 }
 
 @media only screen and (max-width: @breakTablet) {
@@ -182,6 +198,11 @@ aside {
         width: 100%;
     }
 
+    #firefox-hello-start-minimal {
+        h1 {
+            margin: (@baseLine * 14) @baseLine @baseLine;
+        }
+    }
 }
 
 @media only screen and (max-height: 600px) {
