--- a/bedrock/firefox/templates/firefox/australis/whatsnew-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/whatsnew-tour.html
@@ -19,7 +19,7 @@
   data-title="{{ _('See what’s new') }}"
 {% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_tour' %}
 {% endblock %}
 
