--- a/bedrock/firefox/templates/firefox/dashboard-base.html
+++ b/bedrock/firefox/templates/firefox/dashboard-base.html
@@ -8,6 +8,7 @@
 {% block page_title %}{% endblock %}
 
 {% block site_css %}
+  {{ super() }}
   {% stylesheet 'firefox-dashboard' %}
 {% endblock %}
 
