--- a/bedrock/firefox/templates/firefox/firstrun.html
+++ b/bedrock/firefox/templates/firefox/firstrun.html
@@ -16,7 +16,7 @@
 {% block site_header_nav %}{% endblock %}
 {% block site_header_logo %}{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_firstrun' %}
 {% endblock %}
 
