--- a/bedrock/firefox/templates/firefox/organizations/organizations.html
+++ b/bedrock/firefox/templates/firefox/organizations/organizations.html
@@ -9,7 +9,7 @@
 {% block page_desc %}{{ _('Firefox ESR is intended for groups who deploy and maintain the desktop environment in large organizations such as schools, governments and businesses.') }}{% endblock %}
 {% block body_id %}organizations{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_organizations' %}
 {% endblock %}
 
