--- a/bedrock/firefox/templates/firefox/os/faq.html
+++ b/bedrock/firefox/templates/firefox/os/faq.html
@@ -10,7 +10,7 @@
 
 {% block body_id %}firefox-os-faq{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_faq' %}
 {% endblock %}
 
