--- a/bedrock/firefox/templates/firefox/os/tv.html
+++ b/bedrock/firefox/templates/firefox/os/tv.html
@@ -12,7 +12,7 @@
 {% block body_class %}firefox-os-tv blueprint{% endblock %}
 
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_os_tv' %}
 {% endblock %}
 
