--- a/bedrock/firefox/templates/firefox/personal.html
+++ b/bedrock/firefox/templates/firefox/personal.html
@@ -16,14 +16,11 @@
   {% endif %}
 {% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox-personal' %}
 {% endblock %}
 
 {% block tabzilla_tab %}{% endblock %}
-
-{% block tabzilla_css %}{% endblock %}
-{% block tabzilla_js %}{% endblock %}
 
 {% block site_header_nav %}{% endblock %}
 {% block site_header_logo %}{% endblock %}
