--- a/bedrock/firefox/templates/firefox/releases/index.html
+++ b/bedrock/firefox/templates/firefox/releases/index.html
@@ -4,7 +4,7 @@
 {% block page_desc %}{{ _('Release notes for each version of Firefox.') }}{% endblock %}
 {% block body_id %}firefox-releases-index{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_releases_index' %}
 {% endblock %}
 
