--- a/media/css/foundation/annual2012.less
+++ b/media/css/foundation/annual2012.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+	background-color: @textColorSecondary;
+}
+
 body {
 	background: url(/media/img/foundation/annualreport/2012/bg-grain.png) left top repeat;
 }
@@ -12,10 +16,15 @@ body {
 	background: transparent;
 	width: 1280px;
 	margin: 0 auto;
+	margin-top: 7px;
 }
 
 #wrapper {
 	width: 1280px;
+}
+
+#masthead {
+	top: -7px;
 }
 
 .content {
