--- a/media/css/foundation/annual2013.less
+++ b/media/css/foundation/annual2013.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 body {
     background: url(/media/img/foundation/annualreport/2013/bg-grain.png) left top repeat;
 }
@@ -12,6 +16,11 @@ body {
     background: transparent;
     width: 1280px;
     margin: 0 auto;
+    margin-top: 7px;
+}
+
+#masthead {
+    top: -7px;
 }
 
 #wrapper {
