--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+  background-color: @textColorSecondary;
+}
+
 .page-title {
   margin: 0 @gridGutterWidth/2 .5em;
   h2 {
