--- a/media/css/legal/eula.less
+++ b/media/css/legal/eula.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #main-feature {
     > * {
         .span(8);
