--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -24,6 +24,11 @@
 
 // General @layout
 // Override sandstone base layout so we can have full-width blocks.
+
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #wrapper,
 #main-content {
     width: 100%;
