--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -4,6 +4,9 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
 
 /*--------------------------------------------------------------------------*/
 // Reset some template defaults for full-width containers
