--- a/media/css/mozorg/manifesto.less
+++ b/media/css/mozorg/manifesto.less
@@ -14,6 +14,10 @@
     font-weight: 800;
 }
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #outer-wrapper {
     overflow: hidden; /* Avoid overflows by the picture grids */
 }
