--- a/media/css/mozorg/mission.less
+++ b/media/css/mozorg/mission.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/sandstone-resp.less";
 
+#tabzilla:before {
+  background-color: @textColorSecondary;
+}
+
 #wrapper {
   width: 100%;
 }
