--- a/media/css/mozorg/partnerships.less
+++ b/media/css/mozorg/partnerships.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #partnerships {
     #main-feature {
         text-align: center;
