--- a/media/css/styleguide/styleguide.less
+++ b/media/css/styleguide/styleguide.less
@@ -36,6 +36,10 @@ a[href="#TODO"] { color: #f00 !important; }
   .offset(3);
 }
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #outer-wrapper {
     min-width: @widthDesktop;
 }
