--- a/bedrock/firefox/templates/firefox/android/faq.html
+++ b/bedrock/firefox/templates/firefox/android/faq.html
@@ -8,7 +8,7 @@
 {% block page_desc %}{{ _('Firefox for Android is built on the same technology platform as Firefox for the desktop, making it fast, easy to use and secure.') }}{% endblock %}
 {% block body_id %}mobile-faq{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_faq' %}
 {% endblock %}
 
