--- a/bedrock/firefox/templates/firefox/desktop/index.html
+++ b/bedrock/firefox/templates/firefox/desktop/index.html
@@ -21,7 +21,7 @@
   {% endif %}
 {% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_desktop' %}
 {% endblock %}
 
@@ -32,9 +32,6 @@
     {{ download_firefox(simple=True, small=True, dom_id="sticky-download-desktop") }}
   {% endcall %}
 {% endblock %}
-
-{% block tabzilla_css %}{% endblock %}
-{% block tabzilla_js %}{% endblock %}
 
 {% block content %}
 <main role="main" id="main-content">
