--- a/bedrock/firefox/templates/firefox/dev-firstrun.html
+++ b/bedrock/firefox/templates/firefox/dev-firstrun.html
@@ -8,7 +8,7 @@
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_developer_firstrun' %}
 {% endblock %}
 
