--- a/bedrock/firefox/templates/firefox/geolocation.html
+++ b/bedrock/firefox/templates/firefox/geolocation.html
@@ -8,7 +8,7 @@
 {% block page_desc %}{{ _('Firefox can tell websites where you’re located so you can find info that’s more relevant and more useful.') }}{% endblock %}
 {% block body_id %}geolocation{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'firefox_geolocation' %}
 {% endblock %}
 
