--- a/bedrock/foundation/templates/foundation/annualreport/2012/includes/header.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2012/includes/header.html
@@ -1,5 +1,7 @@
 <header id="masthead">
-  <a href="//www.mozilla.org/" id="tabzilla">{{ _('Mozilla') }}</a>
+  <div id="tabzilla">
+    <a href="//www.mozilla.org/">{{ _('Mozilla') }}</a>
+  </div>
 
   {% block site_header_nav %}{% endblock %}
   {% block site_header_logo %}{% endblock %}
