--- a/bedrock/legal/templates/legal/fraud-report.html
+++ b/bedrock/legal/templates/legal/fraud-report.html
@@ -4,7 +4,7 @@
 {% block body_id %}legal_fraude_report_index-page{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'legal_fraud_report' %}
 {% endblock %}
 
