--- a/bedrock/styleguide/templates/styleguide/docs/mozilla-accordion.html
+++ b/bedrock/styleguide/templates/styleguide/docs/mozilla-accordion.html
@@ -8,7 +8,7 @@
 {% block body_id %}mozilla-accordion{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {% stylesheet 'styleguide-docs-mozilla-accordion' %}
 {% endblock %}
 
