--- a/media/css/legal/fraud-report.less
+++ b/media/css/legal/fraud-report.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #main-content {
     .callout-content();
     margin-top: 100px;
