--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -13,6 +13,10 @@
     font-style: normal;
 }
 
+#tabzilla:before {
+    background-color: @textColorSecondary;
+}
+
 #wrapper {
     width: 100%;
 }
