--- a/media/css/privacy/privacy.less
+++ b/media/css/privacy/privacy.less
@@ -4,6 +4,10 @@
 
 @import "../sandstone/lib.less";
 
+#tabzilla:before {
+  background-color: @textColorSecondary;
+}
+
 #outer-wrapper {
   overflow: hidden; /* Fix the layout on IE */
 }
