change article's direction with the video

--- a/media/css/mozorg/mission.less
+++ b/media/css/mozorg/mission.less
@@ -38,6 +38,13 @@
   }
 
 }
+// Adjust main style for RTL
+html[dir="rtl"] #main-content {
+  .main {
+    float: right;
+    clear: right;
+  }
+}
 
 .video {
   .span(6);
