change intro direction

--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -131,6 +131,9 @@ html[dir="rtl"] {
         margin-right: 0;
         margin-left: 490px;
     }
+    #main-content .intro {
+        float: right;
+    }
 }
 
 // Leadership
