--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -113,10 +113,9 @@
             a {
                 display: block;
                 padding: 10px 10px 10px 45px;
-                background-position: 0 50%;
-                background-repeat: no-repeat;
-                background-image: url(/media/img/firefox/all/download-icons.png);
+                background: transparent url(/media/img/firefox/all/download-icons.png) left center no-repeat;
             }
+            
             &.win64 a {
                 background-position: -300px 50%
             }
