--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -727,8 +727,13 @@ html[dir="rtl"] #phone-wrapper figure {
 
 // Android users should only see play store button
 .js.android .show-widget {
+    .download-other {
+        .open-sans-light();
+        .font-size(12px);
+    }
     .dl-button {
         display: block;
+        color: #bee1f5;
     }
     .send-to {
         display: none;
