--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -411,6 +411,13 @@ html[dir="rtl"] #header h1 {
         z-index: 5;
     }
 
+    .download-other {
+        clear: both;    
+        display: block;
+        .font-size(11px);
+        .open-sans();
+    }
+
     @media only screen and (min-width: @breakDesktopWide) {
         &:after {
             left: -160px;
