--- a/media/css/firefox/personal.less
+++ b/media/css/firefox/personal.less
@@ -319,6 +319,15 @@ main {
 section.android-download {
     display: none;
 }
+.download-other {
+    clear: both;    
+    display: block;
+    .open-sans-light();
+    .font-size(12px);
+    a {
+        color: #bee1f5;
+    }
+}
 .android {
     .download-button.download-button-simple {
         display: none;
